[package]
name = "rcheevos-sys"
description = "raw bindings to rcheevos, a library for emulators to inferface with RetroAchievements"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/raisinware/rcheevos-sys/"
edition = "2021"
links = "rcheevos"

[dependencies]

[build-dependencies]
bindgen = "0.70.1"
cc = "1.1.31"
